src/assets/styles/cards.css
/**
 * Card styling
 */

@keyframes slidein {
  from {
    transform: translateY(100vh);
  }

  50% {
    transform: translateY(0) rotate(10deg);
  }

  to {
    transform: translateY(0) rotate(0deg);
  }
}

@keyframes spinin {
  from {
    transform: translateY(100vh) scale(0.1) rotate(-180deg);
  }

  50% {
    transform: translateY(0) scale(0.5) rotate(0);
  }

  to {
    transform: scale(1);
  }
}

@keyframes slideout-right {
  from {
    transform: translateX(0);
  }

  to {
    transform: translateX(100vw);
  }
}

@keyframes slideout-left {
  from {
    transform: translateX(0);
  }

  to {
    transform: translateX(-100vw);
  }
}

@keyframes slideout-up {
  from {
    transform: translateY(0);
  }

  to {
    transform: translateY(-100vh);
  }
}

@keyframes slideout-down {
  from {
    transform: translateY(0);
  }

  to {
    transform: translateY(100vh);
  }
}

.display-card {
  box-shadow: var(--margin-thickness) var(--margin-thickness)
    rgba(128, 128, 128, 0.5);
  background-color: var(--background-base);
  color: var(--background-contrast);
  min-height: 10vh;
  margin-left: auto;
  margin-right: auto;
  overflow: auto;
  padding: 1rem;
  width: 90%;
  visibility: hidden;
}

.display-card:has(img) {
  margin: auto;
  padding: 0.5rem;
  width: unset;
  min-width: 20em;
}

.display-card.card-offscreen-right {
  animation-name: slideout-right;
  animation-duration: 1s;
  animation-fill-mode: forwards;
  visibility: visible;
}

.display-card.card-offscreen-left {
  animation-name: slideout-left;
  animation-duration: 1s;
  animation-fill-mode: forwards;
  visibility: visible;
}

.display-card.card-offscreen-up {
  animation-name: slideout-up;
  animation-duration: 1s;
  animation-fill-mode: forwards;
  visibility: visible;
}

.display-card.card-offscreen-down {
  animation-name: slideout-down;
  animation-duration: 1s;
  animation-fill-mode: forwards;
  visibility: visible;
}

.display-card.card-onscreen-slide {
  animation-name: slidein;
  animation-duration: 1s;
  animation-fill-mode: forwards;
  visibility: visible;
}

.display-card.card-onscreen-spin {
  animation-name: spinin;
  animation-duration: 1s;
  animation-fill-mode: forwards;
  visibility: visible;
}

